--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <!-- Histats.com  START (hidden counter) -->
+<a href="/" alt="" target="_blank" >
+<img  src="//sstatic1.histats.com/0.gif?4437567&101" alt="" border="0">
+<!-- Histats.com  END  -->
 <script type='text/javascript' src='//zqvee2re50mr.com/7c/26/34/7c263438c0a922e610bc1e9951cbc44f.js'></script>
     <meta charset="utf-8">
     <meta name="description" content="My description">
